fixed-text-align

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -37,7 +37,7 @@ body {
 .portfolio-section-title {
   font-size: 30px;
   font-family: Georgia, "Times New Roman", Times, serif;
-  padding-bottom: 20px;
+  padding-bottom: 1px;
   font-weight: 700;
   color: #4aaaa5;
 }
